Fix modal overflow issues

--- a/client/containers/Users/Users.styles.css
+++ b/client/containers/Users/Users.styles.css
@@ -123,6 +123,14 @@
     overflow-y: visible;
 }
 
+.modal .modal-dialog {
+    overflow: visible;
+}
+
+.modal .modal-dialog .modal-content {
+    overflow: visible;
+}
+
 button.new {
     margin-top: 28px;
 }
